# HA_Philips_Ambilight_WLED_Bridge

./: .gitignore  repository.yaml
ambilight_wled_bridge/: .dockerignore  DOCS.md  Dockerfile  README.md  config.yaml  run.sh  run_addon.py
ambilight_wled_bridge/package/: README.md  pyproject.toml
ambilight_wled_bridge/package/src/ambilight_wled_bridge/: __init__.py  bridge.py  cli.py  config.py  ddp.py  diagnostics.py  mapping.py  models.py  output.py  pairing.py  philips.py  smoothing.py  transforms.py  wled.py
